# webtomd

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: demo_webtomd.py
tests/: test_cli.py  test_markdown_tables.py  test_normalize_basic.py  test_wrap.py
webtomd/: cli.py  pipeline.py
webtomd/convert/: frontmatter.py  html_to_markdown.py  wrap.py
webtomd/evaluate/: heuristics.py  llm_eval.py
webtomd/fetchers/: browser_fetcher.py  firecrawl_fetcher.py  http_fetcher.py  jina_reader.py
webtomd/normalize/: html_cleaner.py  readability_fallback.py
webtomd/utils/: io.py  logging.py  metadata.py  robots.py  url.py
